--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "puppeteer": "^21.2.1",
-    "serverless-http": "^3.2.0"
+    "puppeteer": "^21.2.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
